# sushida

./: README.md  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
score/: 20250407.json  20250408.json  20250409.json
src/: App.css  App.tsx  global.d.ts  index.css
src/components/: ScoreChart.tsx  ScoreForm.tsx  ScoreList.tsx  Statistics.tsx
src/hooks/: useLoadCLIData.ts
src/stores/: scoreStore.ts
src/types/: index.ts
src/utils/: cliDataUtils.ts  dateUtils.ts  sampleData.ts
tools/: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup.py
tools/src/: __init__.py  cli.py  ocr.py  parser.py  utils.py
